--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="container">
         <div class="content">
             <h1>MITCHEL C. MBAGHA</h1>
+            <h2>VIDEOS & SCRIPTS ARCHIVE.</h2>
         </div>
         <!-- Collection 1 -->
         <div class="collections"></div>
